[gd_scene load_steps=12 format=3 uid="uid://cr8t15u2vq6hx"]

[ext_resource type="Script" path="res://Scripts/Story_mode.gd" id="1_i7m82"]
[ext_resource type="Texture2D" uid="uid://c7tmqeu8f12e1" path="res://ImageAssets/BG Computer Day 0.png" id="2_6g53f"]
[ext_resource type="Texture2D" uid="uid://cnybskrryfdby" path="res://ImageAssets/Screenshot Error.png" id="3_a52ai"]
[ext_resource type="Texture2D" uid="uid://ca43nx0s8p3wh" path="res://ImageAssets/White.png" id="4_7gl02"]
[ext_resource type="Texture2D" uid="uid://du4o6c2b8b1dk" path="res://ImageAssets/BG Ending 4.png" id="5_eybe2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2bs7b"]
bg_color = Color(0.494118, 0.494118, 0.494118, 0.356863)
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pblvh"]
bg_color = Color(0.266667, 0.407843, 1, 0.207843)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fptmu"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_csy6d"]
Button/styles/hover = SubResource("StyleBoxFlat_pblvh")
Button/styles/normal = SubResource("StyleBoxFlat_fptmu")

[sub_resource type="Animation" id="Animation_t8628"]
resource_name = "Fade"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s4qnk"]
_data = {
"Fade": SubResource("Animation_t8628")
}

[node name="Story_mode" type="CanvasLayer"]
script = ExtResource("1_i7m82")

[node name="Background_Sprite2D" type="Sprite2D" parent="."]
position = Vector2(639, 350)
texture = ExtResource("2_6g53f")

[node name="Dialog_Label" type="Label" parent="."]
offset_left = 44.0
offset_top = 552.0
offset_right = 1206.0
offset_bottom = 647.0
theme_type_variation = &"GraphNodeTitleLabel"
theme_override_styles/normal = SubResource("StyleBoxFlat_2bs7b")
text = "tesinggngikspsn;lfsd"

[node name="Next_Button" type="Button" parent="."]
offset_left = 1080.0
offset_top = 619.0
offset_right = 1202.0
offset_bottom = 650.0
text = "Next"
flat = true

[node name="Coding_Label" type="Label" parent="."]
offset_left = 251.0
offset_top = 156.0
offset_right = 388.0
offset_bottom = 231.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "efsvsbjdwgrVDwg
GWrjbjovd
rbjlsnvd"
visible_characters = 0
visible_ratio = 0.0

[node name="Play_Button" type="Button" parent="."]
offset_left = 1020.0
offset_top = 16.0
offset_right = 1081.0
offset_bottom = 77.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "PLAY"

[node name="Card_Button" type="Button" parent="."]
visible = false
offset_left = 151.0
offset_top = 151.0
offset_right = 398.0
offset_bottom = 375.0
text = "CARD!!!"

[node name="Error_Card_Button" type="Button" parent="."]
visible = false
offset_left = 927.0
offset_top = 155.0
offset_right = 1174.0
offset_bottom = 379.0
text = "Hard to code feature"

[node name="Error" type="Node2D" parent="."]
visible = false

[node name="Button2" type="Button" parent="Error"]
offset_left = -31.0
offset_top = -39.0
offset_right = 1334.0
offset_bottom = 783.0
flat = true

[node name="Sprite2D" type="Sprite2D" parent="Error"]
modulate = Color(1, 1, 1, 0.380392)
position = Vector2(639.5, 353.5)
scale = Vector2(10.7583, 6.19167)
texture = ExtResource("4_7gl02")

[node name="Error_Sprite2D" type="Sprite2D" parent="Error"]
position = Vector2(600, 340)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_a52ai")

[node name="BgEnding4" type="Sprite2D" parent="Error"]
position = Vector2(589, 589)
texture = ExtResource("5_eybe2")

[node name="Error_Button" type="Button" parent="Error"]
offset_left = 240.0
offset_top = 385.0
offset_right = 955.0
offset_bottom = 458.0
theme = SubResource("Theme_csy6d")

[node name="Fade" type="AnimationPlayer" parent="Error"]
root_node = NodePath("../black_Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_s4qnk")
}

[node name="black_Sprite2D" type="Sprite2D" parent="Error"]
modulate = Color(0, 0, 0, 0)
position = Vector2(639.5, 353.5)
scale = Vector2(10.7583, 6.19167)
texture = ExtResource("4_7gl02")

[node name="Testing_Button" type="Button" parent="."]
offset_left = 30.0
offset_top = 28.0
offset_right = 151.0
offset_bottom = 137.0

[connection signal="button_up" from="Next_Button" to="." method="_on_next_button_button_up"]
[connection signal="button_down" from="Play_Button" to="." method="_on_play_button_button_down"]
[connection signal="button_down" from="Card_Button" to="." method="_on_card_button_button_down"]
[connection signal="button_down" from="Error_Card_Button" to="." method="_on_error_card_button_button_down"]
[connection signal="button_down" from="Error_Card_Button" to="." method="_on_card_button_button_down"]
[connection signal="button_down" from="Error/Error_Button" to="." method="_on_error_button_button_down"]
[connection signal="button_down" from="Testing_Button" to="." method="_on_testing_button_button_down"]
[connection signal="button_down" from="Testing_Button" to="." method="_on_button_button_downsccs"]
